--- a/src/app/components/quotations/quotations.component.html
+++ b/src/app/components/quotations/quotations.component.html
@@ -1,20 +1,11 @@
-<div class="container ">
-  <div class="cardQuote cardModel1">
-    <div class="content">
-      <img src="https://img.icons8.com/office/40/000000/quote-left.png"/>
-      <p class="text">O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500.</p>
-    </div>
-    <div class="details">
-      <p>Lorem Ipsum</p>
-    </div>
-  </div>
+<div class="container" *ngFor="let quote of listQuotations">
   <div class="cardQuote cardModel2">
     <div class="content">
       <img src="https://img.icons8.com/office/40/000000/quote-left.png"/>
-      <p class="text">O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500.</p>
+      <p class="text">{{quote.quotation}}</p>
     </div>
     <div class="details">
-      <p>Lorem Ipsum</p>
+      <p>{{quote.author}}</p>
     </div>
   </div>
 </div>
