--- a/src/app/components/quotations/quotations.component.html
+++ b/src/app/components/quotations/quotations.component.html
@@ -1,5 +1,5 @@
 <div class="container" *ngFor="let quote of listQuotations">
-  <div class="cardQuote cardModel2">
+  <div class="cardQuote {{quote.modelCard}}">
     <div class="content">
       <img src="https://img.icons8.com/office/40/000000/quote-left.png"/>
       <p class="text">{{quote.quotation}}</p>
