--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Macondo&family=Oleo+Script+Swash+Caps&display=swap');
+
 * {
   margin: 0;
   padding: 0;
