--- a/src/app/components/add-quotation/add-quotation.component.css
+++ b/src/app/components/add-quotation/add-quotation.component.css
@@ -26,11 +26,10 @@ table {
 .container {
   min-width: 90%;
   margin: 0 auto;
+  border: 1px solid black;
 }
 
 .cardQuote {
-  /* background: #fffad1; */
-
   width: 60%;
   margin: 2em auto;
   padding: 2em;
