--- a/src/app/components/quotations/quotations.component.css
+++ b/src/app/components/quotations/quotations.component.css
@@ -3,13 +3,10 @@
 }
 
 .container {
-  min-width: 720px;
-  margin: 0 auto;
+  display: flex;
 }
 
 .cardQuote {
-  /* background: #fffad1; */
-
   width: 60%;
   margin: 2em auto;
   padding: 2em;
