--- a/src/app/components/quotations/quotations.component.html
+++ b/src/app/components/quotations/quotations.component.html
@@ -1,11 +1,18 @@
-<div class="container" *ngFor="let quote of listQuotations">
-  <div class="cardQuote {{quote.modelCard}}">
-    <div class="content">
-      <img src="https://img.icons8.com/office/40/000000/quote-left.png"/>
-      <p class="text">{{quote.quotation}}</p>
-    </div>
-    <div class="details">
-      <p>{{quote.author}}</p>
+<section class="container" *ngIf="listQuotations.length > 0; else noQuotes;">
+  <div *ngFor="let quote of listQuotations">
+    <div class="cardQuote {{quote.modelCard}}">
+      <div class="content">
+        <img src="https://img.icons8.com/office/40/000000/quote-left.png"/>
+        <p class="text">{{quote.quotation}}</p>
+      </div>
+      <div class="details">
+        <p>{{quote.author}}</p>
+      </div>
     </div>
   </div>
-</div>
+</section>
+<ng-template #noQuotes>
+  <p>Nenhuma Citação adicionada</p>
+</ng-template>
+
+
