--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
 <div class="content" role="main">
 
   <app-add-quotation (submitQuote)="add($event)"></app-add-quotation>
-  <app-quotations [listQuotations]="dataQuotations"></app-quotations>
+  <app-quotations></app-quotations>
 
-  <router-outlet></router-outlet>
+
 </div>
 
