--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <div class="content" role="main">
 
-  <app-add-quotation (submitQuote)="add($event)"></app-add-quotation>
+  <app-add-quotation></app-add-quotation>
   <app-quotations></app-quotations>
 
 
