--- a/src/app/components/add-quotation/add-quotation.component.css
+++ b/src/app/components/add-quotation/add-quotation.component.css
@@ -14,49 +14,26 @@
   width: 50%;
   height: 40px;
   margin: 15px auto;
+  border: none;
+  border-radius: 15px;
+  padding: 1em;
 }
-table {
-  border: 1px solid black;
+
+button {
+  background-color: #009000;
+  text-transform: uppercase;
+  color: white;
 }
 
 .borderHelp {
   border: 1px solid red;
 }
 
-.container {
-  min-width: 90%;
-  margin: 0 auto;
-  border: 1px solid black;
+.models {
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.cardQuote {
-  width: 60%;
-  margin: 2em auto;
-  padding: 2em;
-  border-radius: 25px;
-
-  box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.25);
-  -webkit-box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.25);
-}
-
-.cardQuote .content {
-  display: inline-flex;
-  align-items: center;
-  gap: 16px;
-  margin-bottom: 1em;
-}
-
-.cardQuote .details {
-  margin-left: 2em;
-}
-
-.cardModel1 {
-  background-color: #444;
-  color: gainsboro;
-}
-
-.cardModel2 {
-  background-color: rgb(138, 223, 145);
-  color: rgb(68, 68, 68);
+.models .model {
+  text-align: center;
 }
