--- a/src/app/components/quotations/quotations.component.html
+++ b/src/app/components/quotations/quotations.component.html
@@ -1,4 +1,4 @@
-<section class="container" *ngIf="listQuotations.length > 0; else noQuotes;">
+<section class="container flexWrapGapCenter" *ngIf="listQuotations.length > 0; else noQuotes;">
   <div *ngFor="let quote of listQuotations">
     <div class="cardQuote {{quote.modelCard}}">
       <div class="content">
