--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,10 @@
 body {
   background-color: #3f3f3f;
 }
+.container {
+  min-width: 90%;
+  margin: 2em auto;
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 2em;
+}
