--- a/src/app/components/quotations/quotations.component.css
+++ b/src/app/components/quotations/quotations.component.css
@@ -33,11 +33,13 @@
 
 .cardQuote .details {
   margin-left: 2em;
+  display: flex;
+  justify-content: space-between;
+  gap: 1em
 }
 
 .cardQuote .details p {
   font-weight: 500;
-  /* color: #b3b3b3; */
 }
 
 .class1 {
@@ -54,6 +56,6 @@
 
 .class3 {
   background: linear-gradient(38deg, rgba(10, 2, 158, 1) 0%, rgba(39, 147, 137, 0.8491879350348028) 62%, rgba(42, 173, 131, 1) 100%);
-  color: rgb(68, 68, 68);
+  color: gainsboro;
   font-family: 'Macondo', cursive;
 }
