--- a/src/app/components/quotations/quotations.component.html
+++ b/src/app/components/quotations/quotations.component.html
@@ -7,6 +7,7 @@
       </div>
       <div class="details">
         <p>{{quote.author}}</p>
+        <p>{{quote.data | date: "short"}}</p>
       </div>
     </div>
   </div>
