Estilizando o sinputs dos modelos

--- a/src/app/components/add-quotation/add-quotation.component.html
+++ b/src/app/components/add-quotation/add-quotation.component.html
@@ -7,17 +7,17 @@
     <input id="author" name="author" type="text" [(ngModel)]="author">
 
     <div #model (change)="0" class="models">
-      <div class="model">
+      <div class="model class1">
         <label for="styleClass1">Modelo 1</label>
         <input type="radio" id="styleClass1" name="models" value="class1" [(ngModel)]="modelCard">
       </div>
 
-      <div class="model">
+      <div class="model class2">
         <label for="styleClass2">Modelo 2</label>
         <input type="radio" id="styleClass2" name="models" value="class2" [(ngModel)]="modelCard">
       </div>
 
-      <div class="model">
+      <div class="model class3">
         <label for="styleClass3">Modelo 3</label>
         <input type="radio" id="styleClass3" name="models" value="class3" [(ngModel)]="modelCard">
       </div>
