--- a/src/app/components/add-quotation/add-quotation.component.css
+++ b/src/app/components/add-quotation/add-quotation.component.css
@@ -36,4 +36,24 @@ button {
 
 .models .model {
   text-align: center;
+  padding:1em 2em;
+  border-radius: 15px;
+}
+
+.class1 {
+  background: linear-gradient(38deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+  color: gainsboro;
+  font-family: 'Inconsolata', monospace;
+}
+
+.class2 {
+  background: linear-gradient(38deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+  color: rgb(68, 68, 68);
+  font-family: 'Oleo Script Swash Cap', cursive;
+}
+
+.class3 {
+  background: linear-gradient(38deg, rgba(10, 2, 158, 1) 0%, rgba(39, 147, 137, 0.8491879350348028) 62%, rgba(42, 173, 131, 1) 100%);
+  color: gainsboro;
+  font-family: 'Macondo', cursive;
 }
