--- a/src/app/components/add-quotation/add-quotation.component.html
+++ b/src/app/components/add-quotation/add-quotation.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container boxShadow">
 
   <form class="formGroup" (ngSubmit)="addQuotation()">
     <label for="quotation">Citação</label>
