--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,6 +1,11 @@
 .container {
   text-align: center;
 }
+.boxShadow {
+  border: none;
+  box-shadow: 0px 0px 20px 20px rgb(0 0 0 / 6%), inset 0px 0px 0px 0px rgb(95 95 95 / 0%);
+}
+
 h4{
   font-size: 24px;
 }
