--- a/src/app/components/quotations/quotations.component.css
+++ b/src/app/components/quotations/quotations.component.css
@@ -1,7 +1,10 @@
 .borderHelp {
   border: 1px solid red;
 }
-
+.boxShadow {
+  border: none;
+  box-shadow: 0px 0px 20px 20px rgb(0 0 0 / 6%), inset 0px 0px 0px 0px rgb(95 95 95 / 0%);
+}
 .flexWrapGapCenter {
   display: flex;
   gap: 3em;
